--- a/estilosite.css
+++ b/estilosite.css
@@ -82,8 +82,7 @@ header.hidden {
 
 /* Estilo para a nova imagem da logo */
 .logo img {
-    height: 75px;
-    border-radius: 50px;
+    height: 35px;
     width: auto;
     vertical-align: middle;
 }
@@ -395,8 +394,9 @@ main {
 }
 
 .product-detail-container img {
-    max-width: 100%;
-    height: auto;
+    max-width: 80%; /* Ajusta a largura máxima para 80% do container */
+    height: 350px; /* Define uma altura fixa */
+    object-fit: contain; /* Garante que a imagem se ajuste sem ser cortada */
     border-radius: 8px;
     margin-bottom: 25px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.3);
@@ -596,6 +596,11 @@ footer {
     .product-detail-container .description {
         font-size: 1em;
     }
+    .product-detail-container img { /* Ajuste da imagem para mobile */
+        max-width: 90%; /* Pode ser um pouco maior em mobile para usar o espaço */
+        height: 250px; /* Ajusta a altura da imagem para mobile */
+    }
+
 
     /* Responsividade para a seção Sobre Nós */
     .about-us-container h2 {
